--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,113 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<title>NextStep 온보딩 jest 계산기 미션</title>
+		<style>
+			* {
+				box-sizing: border-box;
+			}
+
+			body {
+				margin: 0;
+				padding: 0;
+				font-family: sans-serif;
+				color: white;
+			}
+
+			#root {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 100vh;
+			}
+
+			.App {
+				width: 411px;
+				height: 823px;
+				border: 1px solid #ccc;
+				border-radius: 20px;
+				background-color: #282727;
+				display: flex;
+				flex-direction: column;
+				overflow: hidden;
+			}
+
+			.outPannel {
+				flex: 2;
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
+				align-items: flex-end;
+				padding: 20px;
+			}
+
+			.beforeNum {
+				font-size: 25px;
+			}
+
+			.input {
+				font-size: 50px;
+			}
+
+			.result {
+				font-size: 50px;
+			}
+
+			.hidden {
+				display: none;
+			}
+
+			.inputPannel {
+				flex: 5;
+				display: flex;
+				height: 100%;
+				box-sizing: border-box;
+				gap: 3px;
+			}
+
+			.inputContainer {
+				flex: 3;
+				height: 100%;
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-template-rows: repeat(4, 1fr);
+				gap: 3px;
+			}
+
+			.BtnContainer {
+				flex: 1;
+				display: grid;
+				grid-template-columns: repeat(1, 1fr);
+				gap: 3px;
+			}
+
+			.btn {
+				padding: 10px;
+				width: 100%;
+				height: 100%;
+				box-sizing: border-box;
+				background: #333;
+				color: #fff;
+				border: none;
+				font-family: Roboto;
+				font-size: 36px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
+			}
+
+			.BtnContainer .btn {
+				background: #4f4e4e;
+				color: #fbbc1c;
+				font-size: 48px;
+				font-weight: 700;
+			}
+
+			.BtnContainer .btn:nth-child(5) {
+				background: #ff9a00;
+				color: #fff;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
